web-infras/parser/tests/fixtures/babel/es2015/meta-properties/invalid-arrow-function/output.txt
[SyntaxError]: `new.target` can only be used in functions or class properties. (2,3)
2|  new.target;
 | ^
